Rectified the payment integration issues

--- a/Gabriel/Views/Works/Payment.cshtml
+++ b/Gabriel/Views/Works/Payment.cshtml
@@ -16,7 +16,7 @@
                 }
            
             
-            <form method="post" asp-controller="" asp-action="">
+            <form method="post" asp-controller="Works" asp-action="Payment">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" class="form-control" asp-for=@paymentmodel.Name name="name" id="name" required />
