--- a/Gabriel/Views/Home/Index.cshtml
+++ b/Gabriel/Views/Home/Index.cshtml
@@ -163,7 +163,7 @@
     <!-- youtube_video_area  -->
     <div class="youtube_video_area">
         <div class="container-fluid p-0">
-            <div class="row no-gutters">
+            <div class="row no-gutters d-flex justify-content-center">
                 <div class="col-xl-3 col-lg-3 col-md-6">
                     <div class="single_video">
                         <div class="thumb">
@@ -202,25 +202,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-6">
-                    <div class="single_video">
-                        <div class="thumb">
-                            <img src="img/believe.jpg" height="200" alt="">
-                        </div>
-                        <div class="hover_elements">
-                            <div class="video">
-                                <a class="popup-video" href="https://www.youtube.com/watch?v=ydHGKLBNptE">
-                                    <i class="fa fa-play"></i>
-                                </a>
-                            </div>
-
-                            <div class="hover_inner">
-                                <span>New York Show-2018</span>
-                                <h3><a href="#">Shadows of My Dream</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+               
                 <div class="col-xl-3 col-lg-3 col-md-6">
                     <div class="single_video">
                         <div class="thumb">
@@ -276,7 +258,7 @@
                         </div>
                         <div class="col-xl-3 col-md-3">
                             <div class="music_btn">
-                                <a href="https://drive.google.com/file/d/1qALHqXVEt2MTjB0XbJy5-B0wq3-RsT1C/view?ts=61a99582" class="boxed-btn">buy piece</a>
+                                <a asp-action="Payment" asp-controller="Works" class="boxed-btn">buy piece</a>
                             </div>
                         </div>
                     </div>
@@ -391,7 +373,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 grid-item cat2 col-md-6">
+                @*<div class="col-xl-4 col-lg-6 grid-item cat2 col-md-6">
                     <div class="single-gallery mb-30">
                         <div class="portfolio-img">
                             <img src="img/gallery/4.png" height="500" alt="">
@@ -402,7 +384,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div>*@
 
             </div>
         </div>
