--- a/Gabriel/Views/Home/Index.cshtml
+++ b/Gabriel/Views/Home/Index.cshtml
@@ -301,7 +301,7 @@
                 <div class="col-xl-7 col-lg-7 grid-item cat3 cat4 col-md-6">
                     <div class="single-gallery mb-30">
                         <div class="portfolio-img">
-                            <img height="370" src="https://scontent.fabv2-2.fna.fbcdn.net/v/t31.18172-8/15875022_1388723921146009_14807062940937790_o.jpg?_nc_cat=111&ccb=1-5&_nc_sid=e3f864&_nc_eui2=AeHre6Dme2jA8w1dPqxjt8vU0MslRPv-ZrfQyyVE-_5mtzv5buw3i5vsXLYor77FQKiIA1YpyORTmLW8Qr7VdPO7&_nc_ohc=JvmlNvit_GMAX_2VB9i&_nc_ht=scontent.fabv2-2.fna&oh=7669d3d86857219e5ab1d4d4929890e3&oe=61B69150" alt="">
+                            <img height="370" src="~/img/photo4.jpg" alt="">
                         </div>
                         <div class="gallery_hover">
                             <a class="popup-image hover_inner" href="https://scontent.fabv2-2.fna.fbcdn.net/v/t31.18172-8/15875022_1388723921146009_14807062940937790_o.jpg?_nc_cat=111&ccb=1-5&_nc_sid=e3f864&_nc_eui2=AeHre6Dme2jA8w1dPqxjt8vU0MslRPv-ZrfQyyVE-_5mtzv5buw3i5vsXLYor77FQKiIA1YpyORTmLW8Qr7VdPO7&_nc_ohc=JvmlNvit_GMAX_2VB9i&_nc_ht=scontent.fabv2-2.fna&oh=7669d3d86857219e5ab1d4d4929890e3&oe=61B69150" @*class="hover_inner"*@>
